<resources>
    <string name="app_name">开源课表</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="login_fail">登录失败, 请检查您的用户名密码\n(以及验证码)</string>
    <string name="network_error">网络连接失败\n是否打开了WiFi或数据流量?</string>
    <string name="network_timeout">校园服务器状态不佳\n请稍后重试</string>
    <string name="unknown_error">/(ㄒoㄒ)/~~发生了未知错误\n开发者正在加班修复</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string-array name="weekdays">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
    <string name="class_table">课程表</string>
    <string name="grade_list">成绩查询</string>
    <string name="search_lib">馆藏查询</string>
    <string name="borrow_info">借阅信息</string>
    <string name="settings">设置</string>
    <string name="search">检索</string>
    <string name="press_to_get_captcha">点击获取验证码</string>
    <string name="enter_code">输入验证码</string>
    <string name="clear">清空</string>
    <string name="school_app">校园应用</string>
    <string name="update_classes">更新课表</string>
    <string name="show_all_borrows">所有借阅</string>
    <string name="show_exceeded">已超期</string>
    <string name="app_description">开源高校应用</string>
    <string name="show_raw">查看馆藏详情</string>
    <string name="password_notice">用户名密码都将保存在本地</string>
    <string name="notice">注意</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="library">图书馆</string>
    <string name="pref_lib_summary">图书管理系统用户名及密码</string>
    <string name="pref_cms_summary">教务网用户名及密码</string>
    <string name="login_to_system">正在登录校园服务器</string>
    <string name="loading_class_page">正在加载课程表页面</string>
    <string name="loading_classes">正在加载课程信息</string>
    <string name="loading_grade_page">正在加载成绩页面</string>
    <string name="loading_grades">正在加载成绩信息</string>
    <string name="loading_target_page">正在前往指定页面</string>
    <string name="loading_user_center">正在加载用户中心</string>
    <string name="loading_borrows">正在加载借阅信息</string>
    <string name="need_captcha">请输入验证码</string>
    <string name="loading_cet_grade">正在加载CET成绩</string>
    <string name="filter">筛选</string>
    <string name="show_all_avail_time">查看所有空闲时间</string>
    <string name="empty_room_query">查空教室</string>
    <string name="enrich_cms_info">请先完善您的教务网个人信息</string>
    <string name="enrich_lib_info">请先完善您的图书馆个人信息</string>
    <string name="load_cet_grade_fail">获取 CET 成绩失败惹, 要不一会儿再试试?</string>
    <string name="no_grades_to_show">没有成绩可以显示</string>
    <string name="no_grades_avail"><![CDATA[没能从教务网获取到成绩 %>_<%]]></string>
    <string name="no_classes_avail"><![CDATA[没能从教务网获取到课表 %>_<%]]></string>
    <string name="no_borrows_avail"><![CDATA[没能从图书馆获取到借阅信息 %>_<%]]></string>
    <string name="no_local_classes_avail">这里还没有课表哦\n(点击右上角获取教务网课表)</string>
    <string name="no_local_grades_avail">这里还没有成绩哦\n(点击右下角获取教务网最新成绩)</string>
    <string name="no_local_borrows_avail">这里还没有借阅信息哦\n(点击右下角获取图书馆借阅信息)</string>
    <string name="something_wrong">出现了点问题~\n</string>
    <string name="no_daily_classes">今天没有课\n好好休息一下吧~</string>
    <string name="creating_class_ical">正在创建课程日历文件</string>
    <string name="export_to_ical">导出到iCal</string>
    <string name="classes">课程表</string>
    <string name="optional">可选项</string>
    <string name="compulsory">重要</string>
    <string name="select_school">选择学校</string>
    <string name="custom_tip">Tips:\n\n
        \t1)在上方输入或修改地址\n\n
        \t2)点击右下角菜单 -> 开始\n\n
        \t3)到达课表界面后点击 到达\n\n
        \t4)根据提示选择课表并设定课表参数\n\n\n\n
        \tPS:若地址有误请启用 自定义 并进行修改
    </string>
    <string name="mail_addr">jeffctor@gmail.com</string>
    <string name="tip_not_exist">如果你的学校不在列表中, 可以使用自定义功能进行添加</string>
    <string name="custom_school">自定义学校</string>
    <string name="enter_captcha">请输入验证码</string>
    <string name="custom_your_class_fetch_way">自定义你的课程表获取方式</string>
    <string name="load_aptcha_fail">获取验证码失败\n</string>
    <string name="apache_license2_url" translatable="false">https://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="project_url" translatable="false">https://github.com/jeffreystoke/openct-mvp</string>
    <string name="chsi_referer">http://www.chsi.com.cn/cet/</string>
    <string name="pref_license_info">
        Apache License, Version 2.0
    </string>
    <string name="action_settings">设置</string>
    <string name="school">学校</string>
    <string name="pref_title_current_week">本周</string>
    <string name="default_motto">不欺</string>
    <string name="school_info">我的校园信息</string>
    <string name="school_name">学校名称</string>
    <string name="address">地址</string>
    <string name="captcha">验证码</string>
    <string name="encryption_tip">你所填写的所有用户信息都存储在本地, 并使用 AES-128 进行加密, 但由于校园系统大多采用明文传输, 请确保网络环境安全</string>
    <string name="custom">自定义</string>
    <string name="homepage_showing">首页显示</string>
    <string name="empty_class_motto">无课宣言</string>
    <string name="basic_custom">基础自定义</string>
    <string name="enable_custom">启用自定义学校</string>
    <string name="cms_config">教务网配置</string>
    <string name="cms">教务网</string>
    <string name="cms_sys">教务系统</string>
    <string name="lib_config">图书馆配置</string>
    <string name="lib_sys">图书管理系统</string>
    <string name="security">安全</string>
    <string name="personalise">个性化</string>
    <string name="project_address">项目地址 (点击前往)</string>
    <string name="open_source_license">开源许可 (点击查看)</string>
    <string name="about_openct">关于 OpenCT</string>
    <string name="saved">已保存</string>
    <string name="load_grade_page_fail">获取成绩页面失败</string>
    <string name="enter_address">输入地址</string>
    <string name="no_related_books">没有查询到相关书籍</string>
    <string name="no_more_results">没有更多结果了</string>
    <string name="edit_class_info">编辑课程</string>
    <string name="encrypted">已加密</string>
    <string name="unencrypted">未加密</string>
    <string name="empty_class_tip">今天没有课, 好好休息一下吧~</string>
    <string name="searching_library">正在检索图书馆馆藏</string>
    <string name="class_detail">课程详情</string>
    <string name="choose_background">选择背景色</string>
    <string name="class_name">课程名称</string>
    <string name="class_type">类型</string>
    <string name="class_time">时间</string>
    <string name="start">开始</string>
    <string name="to">到</string>
    <string name="end">结束</string>
    <string name="class_during">课程周期 (周)</string>
    <string name="odd_week">单周</string>
    <string name="even_week">双周</string>
    <string name="common">普通</string>
    <string name="class_teacher">授课教师</string>
    <string name="class_place">上课地点</string>
    <string name="ical_create_success">创建成功, 文件 OpenCT Classes.ics 保存在手机存储根目录中</string>
    <string name="preparing_school_sys_info">正在准备校园系统信息…</string>
    <string name="no_write_permission">没有写出到外部存储权限, 无法导出</string>
    <string name="custom_finish_tip">课表解析完成, 请回到主界面查看课表\n部分信息可能需要修改\n\nTips: 尝试修改正则表达式进行匹配能得到更加准确的信息</string>
    <string name="sorry_for_unable_to_get_class_info">很遗憾, 没能在该页面解析到课程信息</string>
    <string name="swipe_choose_table">左右滑动选择目标信息</string>
    <string name="what_is_that">上面显示的是 ?</string>
    <string name="click_to_choose_your_school">点击选择你的学校</string>
    <string name="not_in_range_above">不在以上选项内</string>
    <string name="what_did_you_clicked">刚刚点击的输入框是?</string>
    <string name="username_input">用户名输入框</string>
    <string name="common_input">普通输入框</string>
    <string name="select_target_link">选择目标连接</string>
    <string name="question">提问</string>
    <string name="load_online_classes_successful">加载课程信息成功</string>
    <string name="load_online_borrows_successful">加载借阅信息成功</string>
    <string name="load_online_grades_successful">加载成绩信息成功</string>
    <string name="borrows_empty">借阅信息为空</string>
    <string name="grades_empty">成绩信息为空</string>
    <string name="classes_empty">课程信息为空</string>
    <string name="delete">删除</string>
    <string name="weekly_class_empty">本周课表为空</string>
    <string name="clear_classes">清空课程</string>
    <string name="advanced_custom">从网页导入</string>
    <string name="no_class_weekly">本周没有课, 尽情学!习!吧!</string>
    <string name="add_class_info">添加课程</string>
    <string name="import_from_excel">从Excel导入</string>
    <string name="all_classes">所有课程</string>
    <string name="edit">编辑</string>
    <string name="sep"> - </string>
    <string name="jie">节</string>
    <string name="save">保存</string>
    <string name="loading_university_info_list">正在获取学校信息</string>
    <string name="loading_school_list">正在加载学校列表</string>
    <string name="one_more_press_to_exit">再按一次返回键退出</string>
    <string name="today_has">今天有 </string>
    <string name="class_count"> 节课</string>
    <string name="week">周</string>
    <string name="di">第</string>
    <string name="check_schools_update">检查校园信息库更新</string>
    <string name="re_for_classes">课程表正则表达式</string>
    <string name="clear_links_table_selection">清空链接/表格选择</string>
    <string name="clear_action_tip">这将清除你的操作记录, 同时重新获取教务网或图书馆信息时需要再次选择</string>
    <string name="in_line_classes">按行课程表</string>
    <string name="in_line_classes_tip">若一个课程信息不是在一个单元格中, 需要勾选该选项</string>
    <string name="table_settings">表格设置</string>
    <string name="table_settings_tip">设置校园表格的相关信息, 用于解析课表</string>
    <string name="rest_time">课间休息时间(分钟)</string>
    <string name="time_pre_class">一节课时间(分钟)</string>
    <string name="daily_class_count">每日课程数</string>
    <string name="class_settings">课程设置</string>
    <string name="class_settings_tip">设定每日课程数以及每节课的时间, 显示课程信息以及导出到 iCal 文件时将会使用这些信息</string>
    <string name="week_1">第1周</string>
    <string name="week_2">第2周</string>
    <string name="week_3">第3周</string>
    <string name="week_4">第4周</string>
    <string name="week_5">第5周</string>
    <string name="week_6">第6周</string>
    <string name="week_7">第7周</string>
    <string name="week_8">第8周</string>
    <string name="week_9">第9周</string>
    <string name="week_10">第10周</string>
    <string name="week_11">第11周</string>
    <string name="week_12">第12周</string>
    <string name="week_13">第13周</string>
    <string name="week_14">第14周</string>
    <string name="week_15">第15周</string>
    <string name="week_16">第16周</string>
    <string name="week_17">第17周</string>
    <string name="week_18">第18周</string>
    <string name="week_19">第19周</string>
    <string name="week_20">第20周</string>
    <string name="week_21">第21周</string>
    <string name="week_22">第22周</string>
    <string name="week_23">第23周</string>
    <string name="week_24">第24周</string>
    <string name="week_25">第25周</string>
    <string name="week_26">第26周</string>
    <string name="week_27">第27周</string>
    <string name="week_28">第28周</string>
    <string name="week_29">第29周</string>
    <string name="week_30">第30周</string>
    <string name="cet_query">CET 成绩查询</string>
    <string name="full_name">姓名</string>
    <string name="ticket_number">准考证号</string>
    <string name="preserve">预存</string>
    <string name="cet_type">类型</string>
    <string name="grades">成绩</string>
    <string name="exam_time">时间</string>
    <string name="query_what">查询详情</string>
    <string name="can_not_load_prev_target"><![CDATA[根据之前的设置未能获取到预期的页面\n\n请到设置 -> 表格设置 -> 点击 清空链接/表格选择]]></string>
    <string name="target_selection">选择目标</string>
    <string name="click_to_go">点击跳转</string>
    <string name="set_during">设置周期</string>
    <string name="fetch_captcha_fail">获取验证码失败\n</string>
    <string name="new_class">新课程</string>
    <string name="mandatory">必修</string>
    <string name="deleted">已删除</string>
    <string name="restored">已恢复</string>
</resources>