<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_classes"
        android:title="@string/update_classes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_class"
        android:title="@string/add_class_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/export_classes"
        android:title="@string/export_to_ical"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_classes"
        android:title="@string/clear_classes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/custom"
        android:title="@string/advanced_custom"
        app:showAsAction="never"/>
</menu>
