<!--
  ~  Copyright 2016 - 2017 OpenCT open source class table
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--周x-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/monday"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/tuesday"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/wednesday"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/thursday"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/friday"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/saturday"/>

        <TextView
            style="@style/TextAppearance.AppCompat.SeqText"
            android:text="@string/sunday"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/widget_class_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="7"
        android:rowCount="12"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_class_weekly"
        android:visibility="gone"/>
</LinearLayout>