<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2016 - 2017 OpenCT open source class table
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--周x-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/monday"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/tuesday"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/wednesday"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/thursday"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/friday"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/saturday"/>

        <TextView
            style="@style/AppTheme.SeqText"
            android:text="@string/sunday"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/seq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="vertical"/>

            <RelativeLayout
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="14"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>