<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2016 - 2017 OpenCT open source class table
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/school_app">
        <menu>
            <item
                android:id="@+id/nav_grades"
                android:icon="@drawable/ic_grade_list"
                android:title="@string/grade_list"/>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/search_lib"/>
            <item
                android:id="@+id/nav_borrow_info"
                android:icon="@drawable/ic_lib_borrow"
                android:title="@string/borrow_info"/>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_color"
                android:title="@string/theme"/>
        </menu>
    </item>
</menu>
