<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/init_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="初始化个人信息"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/school"/>

            <TextView
                android:id="@+id/info_init_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="点此选择你的学校"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/pref_title_current_week"/>

            <Spinner
                android:id="@+id/info_init_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:entries="@array/pref_week_seq_keys"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/cms_sys"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/info_init_cms_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLines="1"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/info_init_cms_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            app:met_floatingLabel="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/library"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/info_init_lib_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLines="1"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/info_init_lib_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            app:met_floatingLabel="normal"/>

        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="确定"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>
    </LinearLayout>
</ScrollView>